tests/error/modifier_errors/dagger_arg.err
Error: Too many arguments (at $FILE:7:16)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with dagger(1):
  |                 ^ Unexpected argument (expected 0, got 1)

Guppy compilation failed due to 1 previous error
